--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,6 @@
 name: todo
 description: A new Flutter project.
-# The following line prevents the package from being accidentally published to
-# pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: 'none'
 
 version: 1.0.0+1
 
@@ -13,6 +11,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+  intl: ^0.18.1
   flutter_svg: ^2.0.7
   copy_with_extension: ^5.0.3
   provider: ^6.0.5
@@ -22,6 +23,9 @@ dev_dependencies:
   dart_code_metrics: ^5.7.5
   copy_with_extension_gen: ^5.0.3
   build_runner: ^2.4.5
+
+dependency_overrides:
+  intl: ^0.18.1
 
 flutter:
   fonts:
